--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -18,8 +18,14 @@ html
           ul.nav.navbar-nav
             li
               a(href='/about') About
+    
+    .container
+      block content
 
-    block content
+      footer
+        .row
+          .col-xs-12
+            small &copy; David 2018
 
     script(src='/javascripts/app.js')
     script(src='/bootstrap/js/bootstrap.min.js')
