--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -1,52 +1,42 @@
+include _includes/sharedHTMLfunctions
+
 extends layout
 
 block content
   .row.page-header
     .col-lg-12
-      h1 Starcups
+      h1= pageHeader.title
   .row
     .col-xs-12.col-md-9
       .row
         .col-xs-12.col-sm-6
-          p.rating
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star-empty
-            span.glyphicon.glyphicon-star-empty
+          +outputRating(info.rating)
           
-          p 125 high street, reading, RNG 153
+          p= info.address
           
           .panel.panel-primary
             .panel-heading
-              h2.panel-title Opening Hours
+              h2.panel-title= openingTimes.title
             .panel-body
-              p Monday - Friday : 7:00am - 9:00pm
-              p Saturday : 8:00am - 5:00pm
-              p Sunday : closed
+              p Monday - Friday : #{openingTimes.times.weekdays}
+              p Saturday : #{openingTimes.times.saturday}
+              p Sunday : #{openingTimes.times.sunday}
           
           .panel.panel-primary
             .panel-heading
               h2.panel-title Facilities
             .panel-body
-              span.label.label-warning
-                span.glyphicon.glyphicon-ok 
-                | &nbsp;Hot drinks
-              | &nbsp;  
-              span.label.label-warning
-                span.glyphicon.glyphicon-ok 
-                | &nbsp;Food
-              | &nbsp;
-              span.label.label-warning
-                span.glyphicon.glyphicon-ok 
-                | &nbsp;Premium wifi
-              | &nbsp;
+              each facility in facilities
+                span.label.label-warning
+                  span.glyphicon.glyphicon-ok 
+                  | &nbsp;facilitiy
+                | &nbsp;  
         .col-xs-12.col-sm-6.location-map
           .panel.panel-primary
             .panel-heading
-              h2.panel-title Location map
+              h2.panel-title= map.title
             .panel-body
-              img.img-responsive.im-rounded(src='https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&zoom=13&size=600x300&maptype=roadmap&markers=color:blue%7Clabel:S%7C40.702147,-74.015794')
+              img.img-responsive.img-rounded(src=map.url)
       .row
         .col-xs-12
           .panel.panel-primary.review-panel
@@ -54,35 +44,18 @@ block content
               a.btn.btn-default.pull-right(href='/location/review/new') Add Review
               h2.panel-title Reviews
             .panel-body.review-container
-              .row
-                .review
-                  .well.well-sm.review-header
-                    span.rating
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star-empty
-                      span.glyphicon.glyphicon-star-empty
-                    span.reviewAuthor David Yu
-                    small.reviewTime 16 August 2018 
-                  .col-xs-12
+              each review in reviews
+                .row
+                  .review
+                    .well.well-sm.review-header
+                      +outputRating(review.rating)
+                      span.reviewAuthor= review.author
+                      small.reviewTime= review.timeStamp 
+                    .col-xs-12
+                      p= review.userText
 
-              .row
-                .review
-                  .well.well-sm.review-header
-                    span.rating
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star
-                      span.glyphicon.glyphicon-star-empty
-                      span.glyphicon.glyphicon-star-empty
-                    span.reviewAuthor Jayden Smith
-                    small.reviewTime 16 August 2018 
-                  .col-xs-12
-                    p It was a brilliant coffee shop
-    
     .col-xs-12.col-md-3              
-      p.lead Great cafe space to sit down and do stuff
-      p If you have been there please leave a review              
+      p.lead= aboutLocation
+      p= suggestion             
                   
                   
