--- a/app_server/views/location-review.jade
+++ b/app_server/views/location-review.jade
@@ -2,15 +2,15 @@ extends layout
 
 block content
   .row.page-header
-    .col-lg-12
-      h1 Review Starbucks
+    .col-xs-12
+      h1= pageHeader.title
   .row
     .col-xs-12.col-md-6
-      form.form-horizontal(action'/location', method='get', role='form')
+      form.form-horizontal(action='/location', method='get', role='form')
         .form-group
           label.col-xs-10.col-sm-2.control-label(for='name') Name
-          .col-xs-12.col-sm-10
-            .input#name.form-control(name='name')
+          .col-sm-10
+            input#name.form-control(name='name')
         .form-group
           label.col-xs-10.col-sm-2.control-label(for='rating') Rating
           .col-xs-12.col-sm-2
