--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -29,3 +29,4 @@ html
 
     script(src='/javascripts/app.js')
     script(src='/bootstrap/js/bootstrap.min.js')
+    script(src='/javascripts/validation.js')
