--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html
+html(ng-app='loc8rApp')
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
@@ -27,6 +27,8 @@ html
           .col-xs-12
             small &copy; David 2018
 
+    script(src='/angular/angular.min.js')
+    script(src='/angular/loc8rApp.js')
     script(src='/javascripts/app.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascripts/validation.js')
