--- a/app_server/views/location-list.jade
+++ b/app_server/views/location-list.jade
@@ -8,23 +8,22 @@ block content
       .col-lg-6
         h1= pageHeader.title
           small &nbsp;#{pageHeader.tagline}
-    if message
-      .error= message
-    else
-      .row
-        .col-xs-12.col-sm-8
-          .row-list-group
-            each location in locations
-              .col-xs-12.list-group-item
-                h4
-                  a(href='/locations/#{location._id}')= location.name
-                  small &nbsp;
-                    +outputRating(location.rating)
-                  span.badge.pull-right.badge-default= location.distance
-                p.address= location.address
-                p
-                  each facility in location.facilities
-                    span.label.label-warning= facility
-                    &nbsp;
-        .col-xs-12.col-sm-4
-          p.lead Looking for wifi and a seat? Perhaps with coffee, cake or a pint? Loc8r helps you find places to work when out!
+    .row
+      .col-xs-12.col-sm-8(ng-controller="locationListCtrl")
+        .error {{ message }}
+        label(for="filter") Filter results
+        input#filter(type="text", name="filter", ng-model="textFilter")
+        .row-list-group
+            .col-xs-12.list-group-item(ng-repeat="location in data.locations | filter : textFilter")
+              h4
+                a(href='/locations/{{location._id}}') {{ location.name }}
+                small &nbsp;
+                  small(rating-stars, rating="location.rating")
+                span.badge.pull-right.badge-default {{ location.distance | formatDistance }}
+              p.address {{ location.address }}
+              p
+                span.label.label-warning(ng-repeat="facility in location.facilities")
+                  | {{ facility }}
+                &nbsp;
+      .col-xs-12.col-sm-4
+        p.lead Looking for wifi and a seat? Perhaps with coffee, cake or a pint? Loc8r helps you find places to work when out!
